<resources>
    <string name="app_name">Fishscape</string>
    <string name="resume_game">Resume Game</string>
    <string name="start_game">Start Game</string>
    <string name="resume">Resume</string>
    <string name="about_us">About Us</string>
    <string name="settings">Settings</string>
    <string name="quit">Quit Game</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="quit_dialog_title">Quit Game</string>
    <string name="quit_dialog_message">Do you want to quit game?</string>
    <string name="game_over">Game Over</string>
    <string name="new_game">New Game</string>
    <string name="high_score">High Score</string>
    <string name="high_scores">HIGH SCORES</string>
    <string name="quit_game">Quit Game</string>
    <string name="score_value">%1$s</string>
    <string name="main_menu">"Main Menu"</string>
    <string name="quit_game_confirm_text">Do you want to quit game?</string>
    <string name="empty_text">you don\'t have any score yet,\nget in the game\nand win for some scores</string>

    <!-- stage names -->
    <string name="stage_one">Hunger for survival</string>
    <string name="stage_two">Argony of reality</string>
    <string name="stage_three">Embracing the odds</string>
    <string name="stage_four">Identifying the true path</string>
    <string name="stage_five">Becoming the unsurmountable</string>
    <string name="music_text">Music:\nEric Matyas\nwww.soundimage.org</string>
    <string name="background_text">Background:\nwww.unsplash.com</string>
    <string name="copyright_2020">© 2020</string>
</resources>
